lil font size & spacing fixes

--- a/styles/pages/work.module.scss
+++ b/styles/pages/work.module.scss
@@ -3,6 +3,12 @@
 .projectContainer {
   display: flex;
   flex-direction: column;
+  &:not(:first-child) {
+    margin-top: 50px;
+    @include lg {
+      margin-top: 0;
+    }
+  }
   &:not(:last-child) {
     @include gradient-underline;
     margin-bottom: 10px;
@@ -11,7 +17,10 @@
   h2 {
     font-family: vesterbro-poster, serif;
     color: $blue;
-    font-size: 36px;
+    font-size: 30px;
+    @include md {
+      font-size: 36px;
+    }
   }
   .imgContainer {
     display: flex;
